src/test/deca/context/invalid/classes/class_cycle_direct_custom.deca
// Description :
// cycle direct dans l'héritage
//
// Resultats :
// Erreur contextuelle
// Ligne 5 : cycle d'héritage détecté

class D extends D { // doit échouer
}
